[GTK] fast/events/context-activated-by-key-event.html is crashing https://bugs.webkit.org/show_bug.cgi?id=199444

Reviewed by Michael Catanzaro.

Source/WebKit:

GTK supports showing the context menu for keyboard events. In these
cases there may be no pending mouse events, causing the assert to
fail.

Covered by existing tests.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showContextMenu):

LayoutTests:

* platform/gtk/TestExpectations: Remove fixed test entry.


Canonical link: https://commits.webkit.org/227303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264555 268f45cc-cd09-0410-ab3c-d52691b4dbfc